# ChangeLog for app-misc/bleachbit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*bleachbit-0.8.0 (08 Jun 2010)

  08 Jun 2010; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.8.0.ebuild:
  Bumped.

*bleachbit-0.7.4 (01 May 2010)

  01 May 2010; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.7.4.ebuild:
  Bumped.

*bleachbit-0.7.3 (15 Mar 2010)

  15 Mar 2010; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.7.3.ebuild:
  Bumped.

  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> bleachbit-0.7.2.ebuild:
  Style fixes.

  11 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> bleachbit-0.7.2.ebuild:
  Added missing dep. Fixed whitespace.

  09 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +Manifest:
  Hmm, why wasn't Manifest added?

  08 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> bleachbit-0.7.2.ebuild:
  Added nls support.

*bleachbit-0.7.2 (08 Jan 2010)

  08 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.7.2.ebuild,
  +metadata.xml:
  Initial ebuild.
