@@ -1,10 +1,8 @@
-DIST bleachbit-0.7.2.tar.bz2 197750 RMD160 6b6125520900619b0501f55cad8c825f383f1270 SHA1 1fff4832b2d1d514c44254392a6fac5e5ad7a057 SHA256 0613ce9c2a915b628e875a8f45ab383558fbe56f8344264b007c29ce2a402bb1
-DIST bleachbit-0.7.3.tar.bz2 201479 RMD160 121dc301bcefe5e07599d3397d193f15a5eacbb5 SHA1 28b41157a722145b5719e82a6567a4c07f8f8c56 SHA256 b8a97003d77f6481b5885b6be29cb1b02525fc29e88a88675799c57930cbc94f
 DIST bleachbit-0.7.4.tar.bz2 205491 RMD160 883591657f184b1032031f203c2b2183894966a1 SHA1 2ec08d95df6be3f97e472f6c03eb0a9a126dde2a SHA256 fc780e9dc449e1caf773ebffa67508691fce91fcae78838018b863f2fa9c97c5
 DIST bleachbit-0.8.0.tar.bz2 213125 RMD160 f499759c01ebb65f10c2eb958cb1efe7d4bd4437 SHA1 6e835d369f469a0d9d0ad8595ff7848e76101530 SHA256 ad996a6b921b16760749ae27f05e9cc1e19347d05a35fc36a88645e1be7fe651
-EBUILD bleachbit-0.7.2.ebuild 845 RMD160 7b61664879e6f74f4a19d330ae7fc823099dc788 SHA1 a88ed00a0e5e0e50c69c0cd9af972637e0dd04aa SHA256 5822b8cca04c1a6f346f1b0ef5a56af97e9e522e45245e4d2b586759c16f5ad0
-EBUILD bleachbit-0.7.3.ebuild 845 RMD160 7b61664879e6f74f4a19d330ae7fc823099dc788 SHA1 a88ed00a0e5e0e50c69c0cd9af972637e0dd04aa SHA256 5822b8cca04c1a6f346f1b0ef5a56af97e9e522e45245e4d2b586759c16f5ad0
+DIST bleachbit-0.8.2.tar.bz2 233854 RMD160 4b7ce9402a4493529d1beedbcf96e74e5f3b7856 SHA1 06de0959599a4b763399b1fcdc9ec90774e5d281 SHA256 6da75744e347d16120e92519c5634be228aead51b17e295568a2cd819cebd970
 EBUILD bleachbit-0.7.4.ebuild 845 RMD160 7b61664879e6f74f4a19d330ae7fc823099dc788 SHA1 a88ed00a0e5e0e50c69c0cd9af972637e0dd04aa SHA256 5822b8cca04c1a6f346f1b0ef5a56af97e9e522e45245e4d2b586759c16f5ad0
 EBUILD bleachbit-0.8.0.ebuild 845 RMD160 7b61664879e6f74f4a19d330ae7fc823099dc788 SHA1 a88ed00a0e5e0e50c69c0cd9af972637e0dd04aa SHA256 5822b8cca04c1a6f346f1b0ef5a56af97e9e522e45245e4d2b586759c16f5ad0
-MISC ChangeLog 1004 RMD160 b184fc0258a6f4d58ce3a05d102656f0ce6576ca SHA1 6fbcf57828749bd61b6d5259fc29475cd38b51f2 SHA256 30c422be54decd9fd70a59f2a0cc9e43ba8c1d0ce9cdfb5f77cc18b7d68ce20b
+EBUILD bleachbit-0.8.2.ebuild 845 RMD160 7b61664879e6f74f4a19d330ae7fc823099dc788 SHA1 a88ed00a0e5e0e50c69c0cd9af972637e0dd04aa SHA256 5822b8cca04c1a6f346f1b0ef5a56af97e9e522e45245e4d2b586759c16f5ad0
+MISC ChangeLog 1188 RMD160 be1deec1adaf104b0663b114c26092536bf4fc30 SHA1 c046afd583627d07891d737ec2ca6ba6e46bb755 SHA256 00ec5f9c4b126b7b21e89cc4ff9aa391e5f84575b8d1a7e98015412e4ceee6e0
 MISC metadata.xml 247 RMD160 7b4c6f35a51e12dc64a4a0227afcea9c11d151cd SHA1 b734a21f0e6ffa7d636add4d86df0dbeaf4f66c8 SHA256 fec8cc68d7128d2dc08a823865caf6a480f76da53996c37d29c914bc9dc06496
