@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*bleachbit-0.8.2 (28 Nov 2010)
+
+  28 Nov 2010; Michał Ziąbkowski <mziab@o2.pl> -bleachbit-0.7.2.ebuild,
+  -bleachbit-0.7.3.ebuild, +bleachbit-0.8.2.ebuild:
+  Bumped. Removed cruft.
+
 *bleachbit-0.8.0 (08 Jun 2010)
 
   08 Jun 2010; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.8.0.ebuild:
